@@ -219,12 +219,12 @@ arima(lh, order = c(1,0,1))
 
 arima(lh, order = c(3,0,0), method = "CSS")
 
-arima(USAccDeaths, order = c(0,1,1), seasonal = list(order=c(0,1,1)))
-arima(USAccDeaths, order = c(0,1,1), seasonal = list(order=c(0,1,1)),
+arima(USAccDeaths, order = c(0,1,1), seasonal = list(order = c(0,1,1)))
+arima(USAccDeaths, order = c(0,1,1), seasonal = list(order = c(0,1,1)),
       method = "CSS") # drops first 13 observations.
 # for a model with as few years as this, we want full ML
 
-arima(LakeHuron, order = c(2,0,0), xreg = time(LakeHuron)-1920)
+arima(LakeHuron, order = c(2,0,0), xreg = time(LakeHuron) - 1920)
 
 ## presidents contains NAs
 ## graphs in example(acf) suggest order 1 or 3
@@ -233,5 +233,8 @@ require(graphics)
 tsdiag(fit1)
 (fit3 <- arima(presidents, c(3, 0, 0)))  # smaller AIC
 tsdiag(fit3)
+
+## An example of ARIMA forecasting:
+predict(fit3, 3)
 }
 \keyword{ts}
